# OpenGL-Practice

./: README.md
COMP371 Project/: main.cpp
COMP371 Project.xcodeproj/: project.pbxproj
COMP371 Project.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Lab/Lab2_Framework/VS2017/: Labs.vcxproj.filters
Lab/Lab3_Framework/Source/: lab03.cpp
Lab/Lab3_Framework/Xcode/COMP371_Labs.xcodeproj/: project.pbxproj
Lab/Lab_Framework/Source/: lab01.cpp
Lab/Lab_Framework/VS2017/: Labs.vcxproj
LearnOpenGL/OpenGL Practice.xcodeproj/: project.pbxproj
LearnOpenGL/OpenGL Practice.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
LearnOpenGL/include/glad/: glad.c
LearnOpenGL/include/stb/: stb_image.cpp
LearnOpenGL/src/cpp/: shader.cpp  shaders_practice.cpp  texture.cpp  textures_practice.cpp  triangles_1.cpp
LearnOpenGL/src/hpp/: shader.h  texture.h
LearnOpenGL/src/shaders/: shader_1.fragment  shader_1.vertex  shader_2.frag  shader_2.fragment  shader_2.vert
LearnOpenGL_CLion/: .gitignore  .gitmodules  CMakeLists.txt
LearnOpenGL_CLion/lib/assimp-5.0.1/contrib/zip/: CMakeLists.txt
LearnOpenGL_CLion/src/cpp/: camera.cpp  cube.cpp  mesh.cpp  model.cpp  model_test.cpp  shader.cpp  shadows.cpp  texture.cpp  textures_practice.cpp  triangles_1.cpp  triangles_2.cpp
LearnOpenGL_CLion/src/hpp/: camera.h  mesh.h  model.h  shader.h  texture.h
LearnOpenGL_CLion/src/shaders/: border.frag  cube.frag  cube.vert  light.frag  light.vert  model_loading.frag  shader_1.vert  shader_2.vert  shadowShader.frag  windowShader.frag  windowShader.vert
OpenGL Practice.xcodeproj/: project.pbxproj
ProgrammingQuiz2/: .gitignore  .gitmodules  CMakeLists.txt  readme.txt
ProgrammingQuiz2/res/shaders/: line.frag  line.vert  scene.frag  scene.vert  shadow.frag
ProgrammingQuiz2/src/: main.cpp
ProgrammingQuiz2/src/Line/: line.cpp  line.h
ProgrammingQuiz2/src/Utilities/: camera.cpp  camera.h  filesystem.h  mesh.cpp  mesh.h  model.cpp  model.h  shader_m.cpp  shader_m.h  stb_image.cpp  stb_image.h  texture.cpp  texture.h
include/glad/: glad.h
src/cpp/: main.cpp  triangles_2.cpp
(+5 files in other folders)
